@@ -316,7 +316,8 @@ def createCFileBuilders(env):
                                        emitter = {},
                                        suffix = {None:'$CFILESUFFIX'})
         env['BUILDERS']['CFile'] = c_file
-        env['CFILESUFFIX'] = '.c'
+
+        env.SetDefault(CFILESUFFIX = '.c')
 
     try:
         cxx_file = env['BUILDERS']['CXXFile']
@@ -325,7 +326,7 @@ def createCFileBuilders(env):
                                          emitter = {},
                                          suffix = {None:'$CXXFILESUFFIX'})
         env['BUILDERS']['CXXFile'] = cxx_file
-        env['CXXFILESUFFIX'] = '.cc'
+        env.SetDefault(CXXFILESUFFIX = '.cc')
 
     return (c_file, cxx_file)
 
